<resources>
    <string name="app_name">CurreX</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="converter">Converter</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="amount">Amount</string>
    <string name="_0_00">0.00</string>
    <string name="base_code">Base Currency:</string>
    <string name="currency_code">Currency Code</string>
    <string name="exchange_rates_header">Exchange Rates</string>
</resources>