<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/light_gray" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/search_text_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/deep_blue"-->
<!--        android:paddingHorizontal="20dp"-->
<!--        android:paddingVertical="12dp"-->
<!--        app:hintEnabled="false"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/toolbar"-->
<!--        app:startIconDrawable="@drawable/search">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@drawable/rounded_edit_text"-->
<!--            android:hint="@string/search"-->
<!--            android:paddingVertical="-1sp"-->
<!--            android:textColor="?attr/colorOnSecondary"-->
<!--            android:textSize="20sp" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.5">
<!--        app:layout_constraintTop_toBottomOf="@id/search_text_layout"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/converter_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/test_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="USD: %s"
                        android:textSize="28sp"/>

                    <TextView
                        android:id="@+id/converter_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/converter"
                        android:textColor="@color/deep_blue"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/from"
                            android:textColor="@color/charcoal"
                            android:textSize="16sp" />

                        <!--                <Space-->
                        <!--                    android:layout_width="300dp"-->
                        <!--                    android:layout_height="wrap_content"/>-->

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/to"
                            android:textAlignment="textEnd"
                            android:textColor="@color/charcoal"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            style="@style/Widget.AppCompat.Spinner.DropDown"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:src="@drawable/swap" />

                        <Spinner
                            style="@style/Widget.AppCompat.Spinner.DropDown"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingTop="12dp"
                        android:paddingBottom="8dp"
                        android:text="@string/amount"
                        android:textColor="@color/charcoal"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/from_amount_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/_0_00"
                                android:inputType="numberDecimal"
                                android:textAlignment="textEnd"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:src="@drawable/equal"
                            android:layout_gravity="center"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/to_amount_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:hint="@string/_0_00"
                                android:textAlignment="textEnd"/>

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="200dp"-->
<!--                android:layout_marginHorizontal="8dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                app:cardCornerRadius="12dp"-->
<!--                >-->


<!--            </androidx.cardview.widget.CardView>-->
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>